src/objects/Glxy_Allowance__c.object
<CustomObject>
    <description>This table contains information about BA53 allowances for each region. The allowance is the fund that Budget Analysts have for each region. The data is entered by BA53 on quarterly basis.</description>
    <fields>
        <fullName>AllowanceIA1__c</fullName>
        <label>IA Allowance 1st Qtr</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllowanceIA2__c</fullName>
        <label>IA Allowance 2nd Qtr</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllowanceIA3__c</fullName>
        <label>IA Allowance 3rd Qtr</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllowanceNOA1__c</fullName>
        <label>NOA Allowance 1st Qtr</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllowanceNOA2__c</fullName>
        <label>NOA Allowance 2nd Qtr</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AllowanceNOA3__c</fullName>
        <label>NOA Allowance 3rd Qtr</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATarget__c</fullName>
        <label>IA Base Target</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IA_Total_Allowance__c</fullName>
        <formula>AllowanceIA1__c + AllowanceIA2__c + AllowanceIA3__c + AllowanceIA4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Indefinite Authority Funding allowed.</inlineHelpText>
        <label>IA Total Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOATarget__c</fullName>
        <label>NOA Base Target</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOA_Total_Allowance__c</fullName>
        <formula>AllowanceNOA1__c + AllowanceNOA2__c + AllowanceNOA3__c + AllowanceNOA4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total New Obligational Authority funding allowed.</inlineHelpText>
        <label>NOA Total Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RegionCd__c</fullName>
        <label>Region Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_Check__c</fullName>
        <description>The value of the region field is set her by workflow. Only one record per region.</description>
        <label>Region Check</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Allowance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RegionCd__c</columns>
        <columns>IA_Total_Allowance__c</columns>
        <columns>NOA_Total_Allowance__c</columns>
        <columns>FiscalYear__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AL-{000000}</displayFormat>
        <label>Allowance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allowances</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>